# skill-Anti-brain-wiki_note

./: .gitattributes  .gitignore  AGENTS.md  AGENTS.md.bak  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVAL_REPORT.md  HANDOVER.md  HYBRID_ABW_AUDIT_PROMPT.md  HYBRID_ABW_IMPLEMENT_PROMPT.md  HYBRID_ABW_META_AUDIT_PROMPT.md  HYBRID_ABW_RUBRIC.md  README.en.md  README.en.md.bak  README.md  README.md.bak  README_TMP.md  SECURITY.md  abw.bat  abw_config.json  ai_runner.py  brain-state-helper-bridge.md  demo.py  install.ps1  install.sh  pyproject.toml  run_help_v2.py
.brain/: brain.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ABW_MIGRATION_PLAYBOOK.md  ARCHITECTURE.md  BRIEF.hybrid-abw.md  COMMAND_MIGRATION.md  COMMAND_SURFACE.md  GROUNDING_BACKENDS.md  OCR_WINDOWS.md  PROMPT_V2.hybrid-abw.md  RELEASE_CHECKLIST.md  pilot_rollout_plan.md  spec-continuation-kernel-v1.md  v1.0.3_hotfix_notes.md  v1_release_checklist.md
schemas/: brain.schema.json  notebook_package_manifest.schema.json  preferences.schema.json  session.schema.json
scripts/: abw_accept.py  abw_audit.py  abw_cli.py  abw_dashboard.py  abw_entry.py  abw_health.py  abw_help.py  abw_i18n.py  abw_ingest.py  abw_knowledge.py  abw_menu.py  abw_monitor.py  abw_output.py  abw_pack.py  abw_proof.py  abw_review.py  abw_router.py  abw_runner.py  abw_suggestions.py  abw_sync.py  abw_update.py  abw_version.py  abw_wizard.py  build_desktop.bat  continuation_claim.py  continuation_execute.py  continuation_gate.py  continuation_status.py  desktop_smoke.py  finalization_check.py  intent_matcher.py  release_smoke.py  (+1 more)
(+262 files in other folders)
