[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abw-skill"
version = "1.1.0"
description = "ABW command-line workflow helper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100",
]
license = {text = "MIT"}
authors = [
  {name = "ABW maintainers"}
]

[project.scripts]
abw = "abw.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
